--- a/main.html
+++ b/main.html
@@ -7,7 +7,21 @@
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
+	
+    <div class="hero">
+
+		<div id="sec-1">
+			<img src="https://images.pexels.com/photos/2662116/pexels-photo-2662116.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" >
+		</div>
+		
+		<div id="sec-2">
+			<h1>Welcome to my Pintrest clone</h1>
+			<p>Discover new inspiration and find out your favourite ideas</p>
+			<a href="#">Explore more</a>
+		</div>
+	
+	</div>
+	
     <script type="text/javascript" src="./script.js">
 </script>
 
